[package]
name = "p_ls"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
owo-colors = "4.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tabled = "0.20.0"
